feat: can create an account application via the api
