# src/controllers/accounts/applications/CreateAccountApplications.ts
@@ -1,0 +1,53 @@
+import Logger from 'bunyan';
+import * as argon2 from 'argon2';
+import * as crypto from 'crypto';
+import { v4 as uuid } from 'uuid';
+
+import appDatasource from '../../../../db/app-datasource';
+import { components } from '../../../../types/api';
+import { ConflictError } from '../../../errors';
+import { Repository } from 'typeorm';
+import { AccountsRepository, ApplicationsRepository } from '../../../repositories';
+
+export default class CreateAccountApplications {
+  private readonly accountsRepository: Repository<AccountsRepository>;
+
+  private readonly applicationsRepository: Repository<ApplicationsRepository>;
+
+  private readonly accountId: string;
+
+  private readonly data: components['schemas']['AccountAppRequest'];
+
+  constructor(accountId: string, data: components['schemas']['AccountAppRequest']) {
+    this.accountId = accountId;
+    this.data = data;
+    this.accountsRepository = appDatasource.getRepository(AccountsRepository);
+    this.applicationsRepository = appDatasource.getRepository(ApplicationsRepository);
+  }
+
+  async exec(logger: Logger): Promise<components['schemas']['CreateAccountAppResponse']> {
+    const existingAccount = await this.accountsRepository.findOneBy({ id: this.accountId });
+    if (!existingAccount) {
+      logger.info(`Account with id "${this.accountId}" does not exist`);
+      throw new ConflictError(`Account with id "${this.accountId}" does not exist`);
+    }
+    const clientSecret: string = crypto
+      .createHash('sha256')
+      .update(crypto.randomBytes(42))
+      .digest('hex');
+    const clientSecretHash: string = await argon2.hash(clientSecret);
+
+    const accountApp = {
+      id: uuid(),
+      account: { id: existingAccount.id },
+      name: this.data.name,
+      clientId: uuid(),
+      clientSecret: clientSecretHash,
+      description: this.data.description,
+    };
+    await this.applicationsRepository.insert(accountApp);
+    // eslint-disable-next-line @typescript-eslint/no-unused-vars
+    const { account, ...accountData } = accountApp;
+    return { ...accountData, clientSecret, accountId: existingAccount.id };
+  }
+}
